# polars-is-peptide

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  pyproject.toml
.github/workflows/: CI.yml
python/polars_is_peptide/: __init__.py
src/: alphabet.rs  expressions.rs  lib.rs
tests/: test_is_peptide.py
