[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "polars-is-peptide"
version = "0.1.0"
description = "A Polars expression plugin that validates peptide sequences at Rust speed"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Chris Thorpe", email = "drchristhorpe@googlemail.com" }]
keywords = ["polars", "bioinformatics", "peptide", "protein", "validation"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["polars>=1.42"]

[dependency-groups]
dev = [
    "maturin>=1.14",
    "pytest>=8.0",
]

[tool.maturin]
module-name = "polars_is_peptide._internal"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
